--- a/static/style/global.css
+++ b/static/style/global.css
@@ -14,6 +14,10 @@
 	--container-max-width : 720px;
 }
 
+*{
+	box-sizing: border-box;
+}
+
 .center-content{
 	width: 90%;
 	max-width: var(--container-max-width);
@@ -64,4 +68,32 @@ header ul{
 
 footer{
 	background-color: #cccccc;
+}
+
+.liked{
+	border:1px solid red;
+}
+
+.post-list{
+	display: flex;
+	flex-wrap: wrap;
+	gap:1rem;
+}
+
+.post-list>li{
+	border:1px solid var(--color-grey);
+	width: 33%;
+	padding:2rem;
+}
+
+.tag-list{
+	display: flex;
+	gap:1rem;
+	border-radius: 1rem;
+}
+
+.tag-list li{
+	padding:.5rem;
+	background-color: var(--color-grey);
+	border-radius: .5rem;
 }
