--- a/templates/blog/post_detail.html
+++ b/templates/blog/post_detail.html
@@ -20,6 +20,11 @@
         <article>
             <h3 class="ir-hidden">내용</h3>
             <div>{{post.contents}}</div>
+            <ul class="tag-list">
+                {% for tag in post.tags.all %}
+                <li>{{tag.name}}</li>
+                {% endfor %}
+            </ul>
             <div>
                 {% if prev_post %}
                 <a href="{% url "post_detail" prev_post.pk %}">
