--- a/templates/accounts/mypage.html
+++ b/templates/accounts/mypage.html
@@ -1,4 +1,53 @@
 {% extends "base/base.html" %}
 {% block content %}
-<h2>mypage</h2>
+<main class="center-content">
+    <h2>Mypage</h2>
+    <section>
+        <h3 class="ir-hidden">가입정보</h3>
+        <div>
+            <p>{{user.username}}</p>
+        </div>
+    </section>
+    <section>
+        <h3>내가 좋아한 글</h3>
+        <ul class="post-list">
+            {% for post in liked_posts %}
+            <li>
+                <a href="{% url "post_detail" post.pk %}">
+                    {{post.title}} / {{post.author}}<br/>
+                    <ul class="tag-list">
+                        {% for tag in post.tags.all %}
+                        <li>{{tag.name}}</li>
+                        {% endfor %}
+                    </ul>
+                </a>
+            </li>
+            {% endfor %}
+        </ul>
+    </section>
+    <section>
+        <h3>내가 쓴 덧글</h3>
+        <ul class="post-list">
+            {% for comment in comments %}
+            <li>
+                <a href="{% url "post_detail" comment.post.pk %}">
+                    {{comment.contents}} / {{comment.author}}
+                </a>
+            </li>
+            {% endfor %}
+        </ul>
+    </section>
+    <section>
+        <h3>내 글에 달린 덧글</h3>
+        <ul class="post-list">
+            {% for comment in commented_myposts %}
+            <li>
+                <a href="{% url "post_detail" comment.post.pk %}">
+                    {{comment.contents}} / {{comment.author}}
+                </a>
+            </li>
+            {% endfor %}
+        </ul>
+    </section>
+</main>
 {% endblock %}
