--- a/static/style/reset.css
+++ b/static/style/reset.css
@@ -2,7 +2,10 @@
    v2.0 | 20110126
    License: none (public domain)
 */
-
+*{
+	padding:0;
+	margin:0;
+}
 html, body, div, span, applet, object, iframe,
 h1, h2, h3, h4, h5, h6, p, blockquote, pre,
 a, abbr, acronym, address, big, cite, code,
@@ -49,4 +52,11 @@ table {
 a{
 	color:inherit;
 	text-decoration: none;
+}
+button{
+	display: inline;
+	font-size: inherit;
+	color:inherit;
+	background:none;
+	border: none;
 }
