--- a/templates/base/header.html
+++ b/templates/base/header.html
@@ -2,13 +2,13 @@
     <h1>
         <a href="{% url "main" %}">Blog</a>
     </h1>
-    <li>
-        <a href="{% url "post_list" %}">리스트</a>
-    </li>
     <ul>
         {% if request.user.is_authenticated %}
-        <li>
+        <li class="hello">
             {{user.username}}님 안녕하세요!
+        </li>
+        <li>
+            <a href="{% url "post_list" %}">리스트</a>
         </li>
         <li>
             <a href="{% url "post_create" %}">글쓰기</a>
@@ -23,6 +23,9 @@
             </form>
         </li>
         {% else %}
+        <li>
+            <a href="{% url "post_list" %}">리스트</a>
+        </li>
         <li>
             <a href="{% url "login" %}">로그인</a>
         </li>
