--- a/templates/blog/index.html
+++ b/templates/blog/index.html
@@ -1,25 +1,42 @@
 {% extends "base/base.html" %}
+{% load static %}
 {% load blog_tags %}
 {% block content %}
-<main>
+<main class="index-area">
     <section>
-        <h2>인기 프로모션</h2>
-        <ul class="post-list">
-            {% for promotion in promotion_list %}
-            <li>
-                {% trans_promo_query promotion as promo_query %}
-                <a href="{% url 'post_list' %}{{promo_query}}">
-                    {{promo_query}}
-                </a>
-            </li>
-            {% endfor %}
-        </ul>
+        <h2 class="ir-hidden">인기 프로모션</h2>
+
+        <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
+            <div class="carousel-indicators">
+                {% for promotion in promotion_list %}
+                <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="{{forloop.counter0}}" class="{% if forloop.first %}active{% endif %}" aria-current="true" aria-label="Slide {{forloop.counter}}"></button>
+                {% endfor %}
+            </div>
+            <div class="carousel-inner">
+                {% for promotion in promotion_list %}
+                <div class="carousel-item {% if forloop.first %}active{% endif %}">
+                    {% trans_promo_query promotion as promo_query %}
+                    <a class="promo-banner" href="{% url 'post_list' %}{{promo_query}}">
+                        <img src="{% static "assets/banner/" %}{{promotion.promo_code}}.png" class="d-block w-100" alt="{{promotion_promo_code}}">
+                    </a>
+                </div>
+                {% endfor %}
+            </div>
+            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Previous</span>
+            </button>
+            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Next</span>
+            </button>
+        </div>
     </section>
-    <section class="center-content">
-        <h2>최신글</h2>
+    <section class="section-wrapper center-content">
+        <h2 class="title">최신글</h2>
         <ul class="post-list">
             {% for post in latest_list %}
-            <li>
+            <li class="box3">
                 <a href="{% url "post_detail" post.pk %}">
                     {{post.title}} / {{post.author}}
                 </a>
@@ -27,11 +44,11 @@
             {% endfor %}
         </ul>
     </section>
-    <section class="center-content">
-        <h2>인기글</h2>
+    <section class="section-wrapper center-content">
+        <h2 class="title">인기글</h2>
         <ul class="post-list">
             {% for post in popular_list %}
-            <li>
+            <li class="box3">
                 <a href="{% url "post_detail" post.pk %}">
                     {{post.title}} / {{post.author}}
                 </a>
@@ -40,4 +57,5 @@
         </ul>
     </section>
 </main>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
 {% endblock %}
