--- a/static/style/reset.css
+++ b/static/style/reset.css
@@ -53,6 +53,9 @@ a{
 	color:inherit;
 	text-decoration: none;
 }
+a:hover{
+	color:initial !important;
+}
 button{
 	display: inline;
 	font-size: inherit;
