--- a/templates/accounts/accounts_form.html
+++ b/templates/accounts/accounts_form.html
@@ -1,9 +1,11 @@
 {% extends "base/base.html" %}
 {% block content %}
-<h2>accounts_form</h2>
-<form method="POST">
-    {% csrf_token %}
-    {{form.as_p}}
-    <button>submit</button>
-</form>
+<main class="center-content">
+    <h2>accounts_form</h2>
+    <form method="POST">
+        {% csrf_token %}
+        {{form.as_p}}
+        <button>submit</button>
+    </form>
+</main>
 {% endblock %}
