--- a/templates/accounts/profile.html
+++ b/templates/accounts/profile.html
@@ -6,14 +6,23 @@
         <h3>{{author.username}}이 쓴 포스트</h3>
         <ul class="post-list">
             {% for post in posts %}
-            <li>
+            <li class="box3">
                 <a href="{% url "post_detail" post.pk %}">
-                    {{post.title}} / {{post.author}}<br/>
-                    <ul class="tag-list">
-                        {% for tag in post.tags.all %}
-                        <li>{{tag.name}}</li>
-                        {% endfor %}
-                    </ul>
+                    {% if post.thumbnail_image %}
+                    <img src="{{post.thumbnail_image.url}}" alt="">
+                    {% endif %}
+                    <div class="content-box">
+                        <p class="title">{{post.title}}</p>
+                        <ul class="tag-list">
+                            {% for tag in post.tags.all %}
+                            <li>{{tag.name}}</li>
+                            {% endfor %}
+                        </ul>
+                    </div>
+                    <div class="info-box">
+                        <p>by. {{post.author}}</p>
+                        <p>{{post.created_at|date:"Y-m-d"}}</p>
+                    </div>
                 </a>
             </li>
             {% endfor %}
