--- a/templates/blog/post_detail.html
+++ b/templates/blog/post_detail.html
@@ -1,50 +1,59 @@
 {% extends "base/base.html" %}
 {% block content %}
-<main>
-    <section>
-        <h2>{{post.title}}</h2>
-        <p>
-            <a href="{% url "profile" post.author %}">{{post.author}}</a>
-             / {{post.created_at}}
-        </p>
-        {% if user == post.author %}
-        <form action="{% url "post_update" post.pk %}" method="POST">
-            {% csrf_token %}
-            <button>수정하기</button>
-        </form>
-        <form action="{% url "post_delete" post.pk %}" method="POST">
-            {% csrf_token %}
-            <button>삭제하기</button>
-        </form>
-        {% endif %}
+<main class="post-detail-wrapper">
+    <section class="title-area">
+        <h2 class="center-content">{{post.title}}</h2>
+        <div class="info-area center-content">
+            <p>
+                by.<a href="{% url "profile" post.author %}">{{post.author}}</a>
+                 | {{post.created_at|date:"Y-m-d"}}
+            </p>
+            {% if user == post.author %}
+            <div class="btn-area">
+                <form action="{% url "post_update" post.pk %}" method="POST">
+                    {% csrf_token %}
+                    <button>수정하기</button>
+                </form>
+                <form action="{% url "post_delete" post.pk %}" method="POST">
+                    {% csrf_token %}
+                    <button>삭제하기</button>
+                </form>
+            </div>
+            {% endif %}
+        </div>
     </section>
-    <section class="center-content">
+    <section class="post-area center-content">
         <h3 class="ir-hidden">포스트 영역</h3>
         <article>
             <h3 class="ir-hidden">내용</h3>
-            <div>{{post.contents}}</div>
-            <ul class="tag-list">
-                {% for tag in post.tags.all %}
-                <li>{{tag.name}}</li>
-                {% endfor %}
-            </ul>
-            <div>
+            <div class="post-contents">{{post.contents}}</div>
+            {% if post.tags.all %}
+            <div class="tag-area">
+                <p>태그</p>
+                <ul class="tag-list">
+                    {% for tag in post.tags.all %}
+                    <li>{{tag.name}}</li>
+                    {% endfor %}
+                </ul>
+            </div>
+            {% endif %}
+            <div class="nav-area">
                 {% if prev_post %}
-                <a href="{% url "post_detail" prev_post.pk %}">
-                    이전글
-                    {{prev_post.title}}
+                <a class="prev" href="{% url "post_detail" prev_post.pk %}">
+                    <p>&lt; 이전 글</p>
+                    <p>{{prev_post.title}}</p>
                 </a>
                 {% endif %}
                 {% if next_post %}
-                <a href="{% url "post_detail" next_post.pk %}">
-                    다음글
-                    {{next_post.title}}
+                <a class="next" href="{% url "post_detail" next_post.pk %}">
+                    <p>다음 글 &gt;</p>
+                    <p>{{next_post.title}}</p>
                 </a>
                 {% endif %}
             </div>
         </article>
-        <article>
-            <h3>덧글</h3>
+        <article class="comment-area">
+            <h3 class="section-title">덧글</h3>
             <ul>
                 {% for comment in post.comments.all %}
                 <li>
