"update" Post 모델에 view_count 추가

--- a/templates/blog/post_detail.html
+++ b/templates/blog/post_detail.html
@@ -7,6 +7,7 @@
             <p>
                 by.<a href="{% url "profile" post.author %}">{{post.author}}</a>
                  | {{post.created_at|date:"Y-m-d"}}
+                 | {{post.view_count}}
             </p>
             {% if user == post.author %}
             <div class="btn-area">
