"update" accounts앱에 Porfile 모델 추가

--- a/templates/accounts/mypage.html
+++ b/templates/accounts/mypage.html
@@ -5,7 +5,8 @@
     <section>
         <h3 class="ir-hidden">가입정보</h3>
         <div>
-            <p>{{user.username}}</p>
+            <img src="{{profile.profile_image.url}}" alt="{{profile.nickname}}의 프로필 이미지">
+            <p>{{profile.nickname}}</p>
         </div>
     </section>
     <section class="section-wrapper">
