--- a/static/style/global.css
+++ b/static/style/global.css
@@ -244,10 +244,23 @@ footer{
 .post-detail-wrapper .title-area{
 	padding:20rem 0 5rem;
 	background-color: var(--color-point);
+	position: relative;
+}
+
+.post-detail-wrapper .title-area .thumbnail-image{
+	width: 100%;
+	height: 100%;
+	object-fit: cover;
+	position: absolute;
+	left: 0;
+	top:0;
+	opacity: .7;
 }
 
 .post-detail-wrapper .title-area h2{
 	font-size: var(--font-size-huge);
+	position: relative;
+	z-index: 1;
 }
 
 .post-detail-wrapper .title-area .info-area{
@@ -255,6 +268,22 @@ footer{
 	display: flex;
 	align-items: center;
 	justify-content: space-between;
+	position: relative;
+	z-index: 1;
+}
+
+.post-detail-wrapper .title-area .info-area p,
+.post-detail-wrapper .title-area .info-area p a{
+	display: flex;
+	align-items: center;
+	gap:1rem;
+}
+
+.post-detail-wrapper .title-area .info-area p .profile-image{
+	width: 5rem;
+	height: 5rem;
+	border-radius: 50%;
+	object-fit: cover;
 }
 
 .post-detail-wrapper .title-area .btn-area{
@@ -268,7 +297,7 @@ footer{
 }
 
 .post-detail-wrapper .post-area{
-	padding:5rem 0;
+	padding-bottom:5rem;
 	position: relative;
 }
 
@@ -389,7 +418,7 @@ footer{
 	position: sticky;
 	left:0;
 	top:0;
-	transform: translateX(-100%);
+	transform: translate(-100%, 5rem);
 	border: 1px solid var(--color-mid-grey);
 	display: inline-block;
 	padding:2rem;
